plugins {
    id 'java-gradle-plugin'
    id 'maven-publish'
    id 'com.gradle.plugin-publish' version '0.21.0'
}

repositories {
    mavenLocal()
    mavenCentral()
}

sourceCompatibility = 11    
targetCompatibility = 11

dependencies {
    implementation "fr.inria.gforge.spoon:spoon-core:10.1.1"
    implementation project(":cabe-annotations")
}

pluginBundle {
    website = 'https://github.com/xzel23/cabe'
    vcsUrl = 'https://github.com/xzel23/cabe'
    tags = ['java', 'NotNull', 'Nullable', 'null check', 'assertion']
}

gradlePlugin {
    plugins {
        cabePlugin {
            id = 'com.dua3.cabe'
            group = 'com.dua3'
            displayName = 'Plugin for adding assertions during compile time'
            description = 'A plugin that adds assertions for annotated method parameters at compile time.'
            implementationClass = 'com.dua3.cabe.gradle.CabeGradlePlugin'
        }
    }
}
